--- a/ecommerce/requirements.txt
+++ b/ecommerce/requirements.txt
@@ -1,9 +1,11 @@
-Package    Version
----------- -------
-asgiref    3.6.0
-Django     4.1.5
-Pillow     9.4.0
-pip        22.3
-setuptools 65.5.0
-sqlparse   0.4.3
-tzdata     2022.7
+asgiref==3.6.0
+dj-database-url==1.2.0
+Django==4.1.5
+django-heroku==0.3.1
+gunicorn==20.1.0
+Pillow==9.4.0
+psycopg2==2.9.5
+python-decouple==3.7
+sqlparse==0.4.3
+tzdata==2022.7
+whitenoise==6.3.0
